force-app/main/default/objects/Student__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <label>Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>ADBMS</fullName>
            </value>
            <value>
                <fullName>DOS</fullName>
            </value>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>HRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>