force-app/main/default/objects/Student__c/fields/Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Days_Left__c</fullName>
    <formula>Last_Date_of_Fee_Payment__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>