force-app/main/default/objects/Student__c/fields/Last_Date_of_Fee_Payment__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Fee_Payment__c</fullName>
    <label>Last Date of Fee Payment</label>
    <type>Date</type>
</CustomField>