force-app/main/default/objects/Student__c/fields/rel_Bid__c.field-meta.xml
<CustomField>
    <fullName>rel_Bid__c</fullName>
    <label>rel-Bid</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>