force-app/main/default/objects/Student__c/fields/SName__c.field-meta.xml
<CustomField>
    <fullName>SName__c</fullName>
    <label>SName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>